src/main/gen/com/nonnulldinu/clionmeson/languages/parsers/MesonBuildParser.java
// This is a generated file. Not intended for manual editing.
package com.nonnulldinu.clionmeson.languages.parsers;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.nonnulldinu.clionmeson.mesonbuildlang.psi.MesonBuildTypes.*;
import static com.nonnulldinu.clionmeson.languages.parsers.MesonBuildParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class MesonBuildParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return build_definition(b, l + 1);
  }

  /* ********************************************************** */
  // mul_expr (newline? add_op newline? mul_expr)*
  public static boolean add_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "add_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADD_EXPR, "<add expr>");
    r = mul_expr(b, l + 1);
    r = r && add_expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (newline? add_op newline? mul_expr)*
  private static boolean add_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "add_expr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!add_expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "add_expr_1", c)) break;
    }
    return true;
  }

  // newline? add_op newline? mul_expr
  private static boolean add_expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "add_expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = add_expr_1_0_0(b, l + 1);
    r = r && add_op(b, l + 1);
    r = r && add_expr_1_0_2(b, l + 1);
    r = r && mul_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // newline?
  private static boolean add_expr_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "add_expr_1_0_0")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  // newline?
  private static boolean add_expr_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "add_expr_1_0_2")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  /* ********************************************************** */
  // '+' | '-'
  static boolean add_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "add_op")) return false;
    if (!nextTokenIs(b, "", MINUS_OP, PLUS_OP)) return false;
    boolean r;
    r = consumeToken(b, PLUS_OP);
    if (!r) r = consumeToken(b, MINUS_OP);
    return r;
  }

  /* ********************************************************** */
  // "[" [newline? full_expression (newline? "," newline? full_expression)*] (","? newline?) "]"
  public static boolean array_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal")) return false;
    if (!nextTokenIs(b, BRACE_BEGIN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BRACE_BEGIN);
    r = r && array_literal_1(b, l + 1);
    r = r && array_literal_2(b, l + 1);
    r = r && consumeToken(b, BRACE_END);
    exit_section_(b, m, ARRAY_LITERAL, r);
    return r;
  }

  // [newline? full_expression (newline? "," newline? full_expression)*]
  private static boolean array_literal_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_1")) return false;
    array_literal_1_0(b, l + 1);
    return true;
  }

  // newline? full_expression (newline? "," newline? full_expression)*
  private static boolean array_literal_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = array_literal_1_0_0(b, l + 1);
    r = r && full_expression(b, l + 1);
    r = r && array_literal_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // newline?
  private static boolean array_literal_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_1_0_0")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  // (newline? "," newline? full_expression)*
  private static boolean array_literal_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_1_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!array_literal_1_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "array_literal_1_0_2", c)) break;
    }
    return true;
  }

  // newline? "," newline? full_expression
  private static boolean array_literal_1_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_1_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = array_literal_1_0_2_0_0(b, l + 1);
    r = r && consumeToken(b, COMMA);
    r = r && array_literal_1_0_2_0_2(b, l + 1);
    r = r && full_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // newline?
  private static boolean array_literal_1_0_2_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_1_0_2_0_0")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  // newline?
  private static boolean array_literal_1_0_2_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_1_0_2_0_2")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  // ","? newline?
  private static boolean array_literal_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = array_literal_2_0(b, l + 1);
    r = r && array_literal_2_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ","?
  private static boolean array_literal_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_2_0")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  // newline?
  private static boolean array_literal_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_literal_2_1")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  /* ********************************************************** */
  // id_expression atrop full_expression newline
  public static boolean assignment_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_statement")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ASSIGNMENT_STATEMENT, null);
    r = id_expression(b, l + 1);
    r = r && atrop(b, l + 1);
    p = r; // pin = 2
    r = r && report_error_(b, full_expression(b, l + 1));
    r = p && consumeToken(b, NEWLINE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // subscript_method_chain_expr | func_call_expression | par_expression | id | literal
  public static boolean atom(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATOM, "<atom>");
    r = subscript_method_chain_expr(b, l + 1);
    if (!r) r = func_call_expression(b, l + 1);
    if (!r) r = par_expression(b, l + 1);
    if (!r) r = consumeToken(b, ID);
    if (!r) r = literal(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // "=" | "+=" | "-=" | "/=" | "*=" | "%="
  public static boolean atrop(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atrop")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATROP, "<atrop>");
    r = consumeToken(b, ATR_OP);
    if (!r) r = consumeToken(b, COMP_ATR_OP4);
    if (!r) r = consumeToken(b, COMP_ATR_OP5);
    if (!r) r = consumeToken(b, COMP_ATR_OP2);
    if (!r) r = consumeToken(b, COMP_ATR_OP1);
    if (!r) r = consumeToken(b, COMP_ATR_OP3);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // binnum
  static boolean bin_literal(PsiBuilder b, int l) {
    return consumeToken(b, BINNUM);
  }

  /* ********************************************************** */
  // bool_literal | relation_check | add_expr | par_expression | "not" bool_atom
  static boolean bool_atom(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bool_atom")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = bool_literal(b, l + 1);
    if (!r) r = relation_check(b, l + 1);
    if (!r) r = add_expr(b, l + 1);
    if (!r) r = par_expression(b, l + 1);
    if (!r) r = bool_atom_4(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // "not" bool_atom
  private static boolean bool_atom_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bool_atom_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LANG_TOKEN_NOT);
    r = r && bool_atom(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // "true" | "false"
  static boolean bool_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bool_literal")) return false;
    if (!nextTokenIs(b, "", BOOL_LITERAL_FALSE, BOOL_LITERAL_TRUE)) return false;
    boolean r;
    r = consumeToken(b, BOOL_LITERAL_TRUE);
    if (!r) r = consumeToken(b, BOOL_LITERAL_FALSE);
    return r;
  }

  /* ********************************************************** */
  // statement_list
  static boolean build_definition(PsiBuilder b, int l) {
    return statement_list(b, l + 1);
  }

  /* ********************************************************** */
  // bool_atom (newline? "and" newline? bool_atom)*
  public static boolean conditional_and_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_and_expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONDITIONAL_AND_EXPRESSION, "<conditional and expression>");
    r = bool_atom(b, l + 1);
    r = r && conditional_and_expression_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (newline? "and" newline? bool_atom)*
  private static boolean conditional_and_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_and_expression_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!conditional_and_expression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "conditional_and_expression_1", c)) break;
    }
    return true;
  }

  // newline? "and" newline? bool_atom
  private static boolean conditional_and_expression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_and_expression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = conditional_and_expression_1_0_0(b, l + 1);
    r = r && consumeToken(b, LANG_TOKEN_AND);
    r = r && conditional_and_expression_1_0_2(b, l + 1);
    r = r && bool_atom(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // newline?
  private static boolean conditional_and_expression_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_and_expression_1_0_0")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  // newline?
  private static boolean conditional_and_expression_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_and_expression_1_0_2")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  /* ********************************************************** */
  // conditional_and_expression (newline? "or" newline? conditional_and_expression)*
  public static boolean conditional_or_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_or_expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONDITIONAL_OR_EXPRESSION, "<conditional or expression>");
    r = conditional_and_expression(b, l + 1);
    r = r && conditional_or_expression_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (newline? "or" newline? conditional_and_expression)*
  private static boolean conditional_or_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_or_expression_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!conditional_or_expression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "conditional_or_expression_1", c)) break;
    }
    return true;
  }

  // newline? "or" newline? conditional_and_expression
  private static boolean conditional_or_expression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_or_expression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = conditional_or_expression_1_0_0(b, l + 1);
    r = r && consumeToken(b, LANG_TOKEN_OR);
    r = r && conditional_or_expression_1_0_2(b, l + 1);
    r = r && conditional_and_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // newline?
  private static boolean conditional_or_expression_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_or_expression_1_0_0")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  // newline?
  private static boolean conditional_or_expression_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_or_expression_1_0_2")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  /* ********************************************************** */
  // ("continue" | "break") newline
  public static boolean control_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "control_statement")) return false;
    if (!nextTokenIs(b, "<control statement>", LANG_TOKEN_JUMP_BREAK, LANG_TOKEN_JUMP_CONTINUE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONTROL_STATEMENT, "<control statement>");
    r = control_statement_0(b, l + 1);
    r = r && consumeToken(b, NEWLINE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // "continue" | "break"
  private static boolean control_statement_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "control_statement_0")) return false;
    boolean r;
    r = consumeToken(b, LANG_TOKEN_JUMP_CONTINUE);
    if (!r) r = consumeToken(b, LANG_TOKEN_JUMP_BREAK);
    return r;
  }

  /* ********************************************************** */
  // decnum
  static boolean dec_literal(PsiBuilder b, int l) {
    return consumeToken(b, DECNUM);
  }

  /* ********************************************************** */
  // "{" [newline? keyword_elem (newline? "," newline? keyword_elem)*] (","? newline?) "}"
  public static boolean dict_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dict_literal")) return false;
    if (!nextTokenIs(b, CURLY_BRACE_BEGIN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CURLY_BRACE_BEGIN);
    r = r && dict_literal_1(b, l + 1);
    r = r && dict_literal_2(b, l + 1);
    r = r && consumeToken(b, CURLY_BRACE_END);
    exit_section_(b, m, DICT_LITERAL, r);
    return r;
  }

  // [newline? keyword_elem (newline? "," newline? keyword_elem)*]
  private static boolean dict_literal_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dict_literal_1")) return false;
    dict_literal_1_0(b, l + 1);
    return true;
  }

  // newline? keyword_elem (newline? "," newline? keyword_elem)*
  private static boolean dict_literal_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dict_literal_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = dict_literal_1_0_0(b, l + 1);
    r = r && keyword_elem(b, l + 1);
    r = r && dict_literal_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // newline?
  private static boolean dict_literal_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dict_literal_1_0_0")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  // (newline? "," newline? keyword_elem)*
  private static boolean dict_literal_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dict_literal_1_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!dict_literal_1_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "dict_literal_1_0_2", c)) break;
    }
    return true;
  }

  // newline? "," newline? keyword_elem
  private static boolean dict_literal_1_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dict_literal_1_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = dict_literal_1_0_2_0_0(b, l + 1);
    r = r && consumeToken(b, COMMA);
    r = r && dict_literal_1_0_2_0_2(b, l + 1);
    r = r && keyword_elem(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // newline?
  private static boolean dict_literal_1_0_2_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dict_literal_1_0_2_0_0")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  // newline?
  private static boolean dict_literal_1_0_2_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dict_literal_1_0_2_0_2")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  // ","? newline?
  private static boolean dict_literal_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dict_literal_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = dict_literal_2_0(b, l + 1);
    r = r && dict_literal_2_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ","?
  private static boolean dict_literal_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dict_literal_2_0")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  // newline?
  private static boolean dict_literal_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dict_literal_2_1")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  /* ********************************************************** */
  // '==' | '!='
  static boolean eq_op(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "eq_op")) return false;
    if (!nextTokenIs(b, "", COMP_OP1, COMP_OP6)) return false;
    boolean r;
    r = consumeToken(b, COMP_OP1);
    if (!r) r = consumeToken(b, COMP_OP6);
    return r;
  }

  /* ********************************************************** */
  // !<<eof>> (method_call_statement | func_call_statement | assignment_statement | selection_statement_for | repetitive_statement | control_statement)
  public static boolean for_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "for_statement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FOR_STATEMENT, "<for statement>");
    r = for_statement_0(b, l + 1);
    r = r && for_statement_1(b, l + 1);
    exit_section_(b, l, m, r, false, statement_for_recover_parser_);
    return r;
  }

  // !<<eof>>
  private static boolean for_statement_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "for_statement_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !eof(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // method_call_statement | func_call_statement | assignment_statement | selection_statement_for | repetitive_statement | control_statement
  private static boolean for_statement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "for_statement_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = method_call_statement(b, l + 1);
    if (!r) r = func_call_statement(b, l + 1);
    if (!r) r = assignment_statement(b, l + 1);
    if (!r) r = selection_statement_for(b, l + 1);
    if (!r) r = repetitive_statement(b, l + 1);
    if (!r) r = control_statement(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (for_statement | newline)*
  public static boolean for_statement_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "for_statement_list")) return false;
    Marker m = enter_section_(b, l, _NONE_, FOR_STATEMENT_LIST, "<for statement list>");
    while (true) {
      int c = current_position_(b);
      if (!for_statement_list_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "for_statement_list", c)) break;
    }
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  // for_statement | newline
  private static boolean for_statement_list_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "for_statement_list_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = for_statement(b, l + 1);
    if (!r) r = consumeToken(b, NEWLINE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // full_expression
  static boolean full_bool_expression(PsiBuilder b, int l) {
    return full_expression(b, l + 1);
  }

  /* ********************************************************** */
  // ternary_expression | conditional_or_expression | add_expr
  public static boolean full_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "full_expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FULL_EXPRESSION, "<full expression>");
    r = ternary_expression(b, l + 1);
    if (!r) r = conditional_or_expression(b, l + 1);
    if (!r) r = add_expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // keyword_elem | positional_func_arg
  public static boolean func_arg(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_arg")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNC_ARG, "<func arg>");
    r = keyword_elem(b, l + 1);
    if (!r) r = positional_func_arg(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // newline? func_arg (newline? "," newline? func_arg)*(","? newline?)
  public static boolean func_args(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_args")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNC_ARGS, "<func args>");
    r = func_args_0(b, l + 1);
    r = r && func_arg(b, l + 1);
    r = r && func_args_2(b, l + 1);
    r = r && func_args_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // newline?
  private static boolean func_args_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_args_0")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  // (newline? "," newline? func_arg)*
  private static boolean func_args_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_args_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!func_args_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "func_args_2", c)) break;
    }
    return true;
  }

  // newline? "," newline? func_arg
  private static boolean func_args_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_args_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = func_args_2_0_0(b, l + 1);
    r = r && consumeToken(b, COMMA);
    r = r && func_args_2_0_2(b, l + 1);
    r = r && func_arg(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // newline?
  private static boolean func_args_2_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_args_2_0_0")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  // newline?
  private static boolean func_args_2_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_args_2_0_2")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }

  // ","? newline?
  private static boolean func_args_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_args_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = func_args_3_0(b, l + 1);
    r = r && func_args_3_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ","?
  private static boolean func_args_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_args_3_0")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  // newline?
  private static boolean func_args_3_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "func_args_3_1")) return false;
    consumeToken(b, NEWLINE);
    return true;
  }
